fix alignment issue in header

--- a/style.css
+++ b/style.css
@@ -6,18 +6,23 @@ body {
 
 .header {
     background-color: #1F2937;
+    display: flex;
+    padding: 24px;
+    padding-left: 10%;
+    padding-right: 10%;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .link-row {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
 .intro {
     display: flex;
     justify-content: center;
-    padding: 48px;
     gap: 24px;
 }
 
@@ -25,7 +30,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 35%;
 }
 
 .main-text {
@@ -146,4 +150,12 @@ button {
 
 #white-outline {
     border-color: #F9FAF8;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1F2937;
+    padding: 24px;
 }
